--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-啊啊啊
+<!DOCTYPE html>
+<html>
+	<head>
+	<meta http-equiv="refresh" content="5;url=https://d.lvtoude.ltd:16999">
+	</head>
+<body>
+</body>
+</html>
